--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>dubbo-demo</module>
     <module>dubbo-beidao-filter</module>
     <module>dubbo-beidao-cluster</module>
+    <module>dubbo-beidao-hystrix</module>
   </modules>
 
     <dependencies>
